--- a/kisko_develop/index.html
+++ b/kisko_develop/index.html
@@ -15,43 +15,30 @@
  <!--menú -->
      <div class="container-fluid">
         <div class="row">
-            <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-                <div class="container">
-                    
-                    <a id="imagenbanner" class="navbar-brand js-scroll-trigger" href="https://www.unicef.com">
-                        <img src="images/logo.png" alt="logo" width="165px" class="logopng">
-                    </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-
-                    <div data-aos="fade-up" class="collapse navbar-collapse" id="navbarNavDropdown">
-                        <ul class="navbar-nav">
-                          
-                          <li class="nav-item">
-                            <a style="font-size: 20px; margin-left: 20px;" class="nav-link" href="#">Estadísticas</a>
-                          </li>
-                          <li class="nav-item">
-                            <a style="font-size: 20px; margin-left: 20px;" class="nav-link" href="#">Concursos</a>
-                          </li>
-
-                          <li class="nav-item">
-                                <a style="font-size: 20px; margin-left: 20px;" class="nav-link" href="#">Galería</a>
-                              </li>
-
-                          <li style="font-size: 20px; margin-left: px;  " class="nav-item">
-                            <a class="nav-link" href="#">Contactos</a>
-                          </li>
-                        </ul>
-                      </div>
-
-                </div>
-            </nav>
-        </div>
-    </div>
+            <div class="col-12">          
+                <nav id="mainNav" class="navbar  fixed-top navbar-expand-lg navbar-light bg-light">
+                        <a class="navbar-brand" href="#">Kiosko</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                          <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                          <ul class="navbar-nav">
+                            <li class="nav-item active">
+                              <a class="nav-link" href="#">Cómo participar <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">Premios</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">Productos participantes</a>
+                            </li>
+                          </ul>
+                        </div>
+                      </nav>
+                    </div>
+            </div>
+     </div>
  <!--Fin menú -->
-
-
 
 </head>
 <body>
