--- a/kisko_develop/index.html
+++ b/kisko_develop/index.html
@@ -11,31 +11,33 @@
      <link rel="stylesheet" type="text/css" href="css/Style.css">
      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
      <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
      <!--Fin Bootstrap -->
  <!--menú -->
      <div class="container-fluid">
         <div class="row">
             <div class="col-12">          
-                <nav id="mainNav" class="navbar  fixed-top navbar-expand-lg navbar-light bg-light">
-                        <a class="navbar-brand" href="#">Kiosko</a>
+                <nav id="mainNav" class="navbar  fixed-top navbar-expand-lg navbar-light">
+                        
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                           <ul class="navbar-nav">
                             <li class="nav-item active">
-                              <a class="nav-link" href="#">Cómo participar <span class="sr-only">(current)</span></a>
+                              <a style="color: white" class="nav-link" href="#">Cómo participar <span class="sr-only">(current)</span></a>
+                            </li> 
+                            <li class="nav-item">
+                              <a  style="color: white"  class="nav-link" href="#">Premios</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#">Premios</a>
-                            </li>
-                            <li class="nav-item">
-                              <a class="nav-link" href="#">Productos participantes</a>
+                              <a  style="color: white"  class="nav-link" href="#">Productos participantes</a>
                             </li>
                           </ul>
                         </div>
                       </nav>
                     </div>
+                          <img id="bandera" class="img-fluid" src="images/Asset2.png" alt="">     
             </div>
      </div>
  <!--Fin menú -->
