--- a/kisko_develop/index.html
+++ b/kisko_develop/index.html
@@ -15,7 +15,7 @@
      <!--Fin Bootstrap -->
  <!--menú -->
      <div class="container-fluid">
-        <div class="row">
+        <div class="row"> 
             <div class="col-12">          
                 <nav id="mainNav" class="navbar  fixed-top navbar-expand-lg navbar-light">
                         
@@ -25,7 +25,7 @@
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                           <ul class="navbar-nav">
                             <li class="nav-item active">
-                              <a style="color: white" class="nav-link" href="#">Cómo participar <span class="sr-only">(current)</span></a>
+                              <a style="color: white; " class="nav-link" href="#">Cómo participar <span class="sr-only">(current)</span></a>
                             </li> 
                             <li class="nav-item">
                               <a  style="color: white"  class="nav-link" href="#">Premios</a>
@@ -37,16 +37,42 @@
                         </div>
                       </nav>
                     </div>
-                          <img id="bandera" class="img-fluid" src="images/Asset2.png" alt="">     
+
             </div>
-     </div>
+            <center>
+            <img  id="bandera" class="img-fluid" src="images/Asset2.png" alt=""> 
+          </center>
+          </div>
  <!--Fin menú -->
 
 </head>
 <body>
-
-
+  <!--body -->
+<div class="row"></div>
+<div class="row"></div>
+<div class="row"></div>
+<div class="row"></div>
+<div class="row"></div>
+ <!--fin -->
 </body>
+ 
+
+<footer>
+  <div class="container-fluid"> 
+    <div class="row">
+    <nav id="footer1" class="navbar fixed-bottom navbar-light ">
+        <div class="col-sm-offset-6">
+            <a style="color: white; font-size: 16px" class="navbar-brand" href="#">Términos y condicones</a>
+            <a style="color: white; font-size: 16px" class="navbar-brand" href="#">Contacto</a>
+        </div>
+            <div class="col-offset-6">
+            <img src="images/aseet4.ico" alt="">
+            <img style="margin-left: 10px" src="images/instagram-24.ico" alt="">
+        </div>
+      </div>
+    </nav> 
+  </div>
+</footer>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
